--- a/Snake/Snake/index.html
+++ b/Snake/Snake/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game 10x10</title>
+    <title>Snake [EASY]</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,6 +21,9 @@
             <div id="0:7"></div><div id="1:7"></div><div id="2:7"></div><div id="3:7"></div><div id="4:7"></div><div id="5:7"></div><div id="6:7"></div><div id="7:7"></div><div id="8:7"></div><div id="9:7"></div>
             <div id="0:8"></div><div id="1:8"></div><div id="2:8"></div><div id="3:8"></div><div id="4:8"></div><div id="5:8"></div><div id="6:8"></div><div id="7:8"></div><div id="8:8"></div><div id="9:8"></div>
             <div id="0:9"></div><div id="1:9"></div><div id="2:9"></div><div id="3:9"></div><div id="4:9"></div><div id="5:9"></div><div id="6:9"></div><div id="7:9"></div><div id="8:9"></div><div id="9:9"></div>
+        </div>
+        <div id="ScoreBoard">
+            Score : <span id="Score"></span>
         </div>
     </div>
     <script src="index.js"></script>
