--- a/Snake/SnakeHard/index.html
+++ b/Snake/SnakeHard/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="Screen">
+    <div id="Screen">id="Search"
         <div id="GameBoard">
             <!-- Générer les cases 10x10 via JS ou HTML -->
             <div id="0:0"></div><div id="1:0"></div><div id="2:0"></div><div id="3:0"></div><div id="4:0"></div><div id="5:0"></div><div id="6:0"></div><div id="7:0"></div><div id="8:0"></div><div id="9:0"></div>
